app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      run: demo
  template:
    metadata:
      labels:
        run: demo
    spec:
      containers:
        - image: nginx:latest
          imagePullPolicy: IfNotPresent
          name: demo
          ports:
            - containerPort: 80
              protocol: TCP
