app/ngnix-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix-deployment1
  namespace: test
  labels:
    app: ngnix1
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ngnix1
  template:
    metadata:
      annotations:
        imp: "1"
      labels:
        app: ngnix1
    spec:
      containers:
        - image: us.gcr.io/kube-flux/kube-flux-zeus:0.0.3
          name: ngnix3
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 9999
status: {}
