app/ngnix-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix-deployment2
  namespace: test
  labels:
    app: ngnix2
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ngnix2
  template:
    metadata:
      annotations:
        imp: "2"
      labels:
        app: ngnix2
    spec:
      containers:
        - image: us.gcr.io/kube-flux/kube-flux-zeus:0.0.3
          name: ngnix3
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 9999
status: {}
