app/ngnix-deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix-deployment3
  namespace: default
  labels:
    app: ngnix3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ngnix3
  template:
    metadata:
      annotations:
        imp: "3"
      labels:
        app: ngnix3
    spec:
      containers:
        - image: nginx:latest
          imagePullPolicy: IfNotPresent
          name: ngnix3
          ports:
            - containerPort: 80
              protocol: TCP
