app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: demo
  type: NodePort
